--- a/src/App.css
+++ b/src/App.css
@@ -52,11 +52,21 @@ main {
 }
 
 .cards-container {
-  display: grid;
-  grid-template-areas:
-    "input output";
-  grid-template-columns: 50% 1fr;
-  grid-template-rows: 1fr;
-  padding: 2em;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   gap: 1em;
+  margin: auto;
+  width: 100%;
+  height: 350px;
+}
+
+@media (width <= 781px) {
+  .cards-container {
+    flex-direction: column;
+    height: 100%;
+  }
+
+  
 }
