--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,9 @@
 
 main {
   display: flex;
+  flex-direction: column;
   min-height: 100vh;
   width: 100%;
-  align-items: center;
-  justify-content: center;
 }
 
 @keyframes logo-spin {
@@ -44,29 +43,36 @@ main {
   display: flex;
   width: 100%;
   justify-content: center;
+  align-items: center;
   border-bottom: 1px solid lightgray;
 }
 
-#appName {
+#app-name {
   text-shadow: 5px 5px 12px rgba(0, 0, 0, 1);
 }
 
 .cards-container {
   display: flex;
+  align-self: center;
+  flex: 1;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 1em;
-  margin: auto;
-  width: 100%;
-  height: 350px;
+  width: 90%;
 }
 
-@media (width <= 781px) {
+@media (width <=820px) {
   .cards-container {
     flex-direction: column;
-    height: 100%;
   }
 
-  
+  .main-title {
+    text-align: center;
+  }
+
+  #app-name {
+    width: 100%;
+    font-size: 2rem;
+  }
 }
